--- a/Forms/errorListing.resx
+++ b/Forms/errorListing.resx
@@ -125,7 +125,7 @@
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
         ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB4
-        CgAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        CgAAAk1TRnQBSQFMAgEBBAEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -163,7 +163,7 @@
         ARkHzQQAAW0B7wIAARQFAAH/AwABCQEAAf8G1AHVAgABCQEAAZoDTQEaBwAETQEJD80B8wHyAfEB6gIA
         AfMCAAEVAfEC8gIAAf8CAAEJCwABCQEAAf8DTQH/AgABGgFNAwAB4wNNAf8GzQEZAQAHzQUAARIBAAHs
         CgABCQEAAf8CCQHdAgAFCQIABE0B/wEaA00BAAHjA00B/wEABs0BGQEABs0B/wQAAfEDAAHyBgAB6wIA
-        AQkHAAHNAgABzgMAAf8MTQF1AgAB/wzNAdUPAAHrAwABCQcAAc0BAAHOBQAB9QpNAeMEAAH1Cs0B1A8A
+        AQkHAAHNAgABzgMAAf8MTQF1AgAB/wzNAdUPAAHrAwABCQcAAc0BAAHOBQAB/wpNAeMEAAH/Cs0B1A8A
         AesEAAEJBwABzQHOBwAB/whNAb0GAAH/CM0BCRUACc0KAAH/AZoB4wFNAXUB8woAAf8BCQHUAc0B1QHz
         BQABQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/4EAAf8B+wHAAQEB8AEPAfABDwH/
         AfkB3wH9AeABAwHgAQMBDwGAAd8B/QHAAQEBwAEBAQIBAAHQAQ0BgAEBAYABAQECAQAB3wH9AYYBIAKA
@@ -172,4 +172,7 @@
         AfkB3wHXAcABAwHAAQMB/wH7Ad8BzwHgAQcB4AEHAv8BwAEfAfgBHwH4AR8L
 </value>
   </data>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
 </root>
