--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,6 +118,21 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="CTLOPTCPY" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\IBMi\QRPGLESRC\NPPCTLOPT.rpgleinc;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="DSPFFDCLP" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\IBMi\QCLSRC\NPPDSPFFD.clle;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="DSPFFDCMD" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\IBMi\QCMDSRC\NPPDSPFFD.cmd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="RTVCMDCMD" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\IBMi\QCMDSRC\NPPRTVCMD.cmd;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
+  <data name="RTVCMDRPG" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\IBMi\QRPGLESRC\NPPRTVCMD.rpgle;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="star" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>star.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
